--- a/app/components/Landing.module.css
+++ b/app/components/Landing.module.css
@@ -66,8 +66,8 @@
   align-items: center;
   gap: 8px;
   flex-wrap: nowrap;
-  min-width: 200px;
-  max-width: 200px;
+  min-width: 230px;
+  max-width: 230px;
   justify-content: center;
 }
 
